🐛 FIX: Dropdown menus on mobile (#367)
This left translation ensures they are visible on small screens

--- a/src/scss/_topbar.scss
+++ b/src/scss/_topbar.scss
@@ -78,6 +78,7 @@ div.dropdown-buttons-trigger {
         max-width: 130px;
         margin-top: .2em;
         z-index: 1000;
+        transform: translate(-60%);
 
         &.sourcebuttons .topbarbtn i {
             padding-right: 6px;
